<?xml version="1.0"?>
<package format="3">
  <name>diffdrive_interfaces</name>
  <version>0.0.1</version>
  <description>Custom interfaces for the differential drive project</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Needed for introspection and future actions/services -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
